# gas-window-finder

./: .gitignore  README.md  pyproject.toml
src/gas_window_finder/: cli.py
src/gas_window_finder.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_cli.py
