[project]
name = "gas-window-finder"
version = "0.1.0"
description = "Multi-chain gas fee quotes and low-fee window finder"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
gas-window-finder = "gas_window_finder.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
